--- a/03_01/nodeport.yaml
+++ b/03_01/nodeport.yaml
@@ -12,4 +12,4 @@ spec:
       targetPort: 80
       nodePort: 30076
       protocol: TCP
-  type: NodePort
+  type: NodePort #NodePort service lets you expose pods to the internet.
